# ecoscope-workflows-ext-gcf

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
conda.recipe/: recipe.yaml
src/ecoscope_workflows_ext_gcf/: __init__.py
